--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "vue3-sketch-ruler",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "workspaces": [
+    "packages/*"
+  ],
+  "engines": {
+    "node": ">=12.0.0",
+    "vue":">=3.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -8,8 +15,8 @@
     "precommit": "lint-staged",
     "lint-fix": "eslint --fix ./src --ext .vue,.js,.ts",
     "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
-    "format": "prettier-eslint --write src/**/*.{js,vue,css,scss,styl} ",
-    "css": "cross-env stylelint src/**/*.{html,vue,css,less,scss,styl} --fix ",
+    "format": "prettier-eslint --write src/**/*.{js,vue,css,scss,styl} && prettier-eslint --write packages/**/*.{js,vue,css,scss,styl} ",
+    "css": "cross-env stylelint src/**/*.{html,vue,css,less,scss,styl} --fix && stylelint packages/**/*.{html,vue,css,less,scss,styl} ",
     "pretty": "pretty-quick --staged",
     "prepare": "husky install"
   },
