--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "node": ">=12.0.0",
     "vue":">=3.0.0"
   },
+  "main": "dist/index.umd.js",
+  "module": "dist/index.esm.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -44,5 +46,18 @@
     "stylelint-config-standard": "22.0.0",
     "stylelint-order": "4.1.0",
     "vite": "^2.5.4"
-  }
+  },
+  "keywords": [
+    "vue3",
+    "ruler",
+    "javascript",
+    "sketch-ruler",
+    "vue-ruler",
+    "vite2"
+],
+"repository": {
+  "type": "git",
+  "url": "https://github.com/chuxiaoguo/vue-sketch-ruler"
+},
+"author": "kakajun <253495832@qq.com>"
 }
