--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
 ],
 "repository": {
   "type": "git",
-  "url": "https://github.com/chuxiaoguo/vue-sketch-ruler"
+  "url": "https://https://github.com/majun2232/vue3sketchRuler"
 },
 "author": "kakajun <253495832@qq.com>"
 }
