refactor: refactor vue Api

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,11 +1,11 @@
 {
   "recommendations": [
-    "octref.vetur",
+    "johnsoncodehk.volar",
+    "johnsoncodehk.vscode-typescript-vue-plugin",
     "dbaeumer.vscode-eslint",
     "stylelint.vscode-stylelint",
     "esbenp.prettier-vscode",
     "christian-kohler.path-intellisense",
-    "mikestead.dotenv",
     "formulahendry.auto-close-tag",
     "formulahendry.auto-rename-tag"
   ]
