refactor: use ts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
-  "cSpell.words": ["windi"],
   "typescript.tsdk": "./node_modules/typescript/lib",
   "volar.tsPlugin": true,
-  "volar.tsPluginStatus": false,
   //===========================================
   //============= Editor ======================
   //===========================================
@@ -15,7 +13,6 @@
   //============= Other =======================
   //===========================================
   "breadcrumbs.enabled": true,
-  "open-in-browser.default": "chrome",
   //===========================================
   //============= emmet =======================
   //===========================================
@@ -74,18 +71,6 @@
   },
   "stylelint.enable": true,
   "stylelint.packageManager": "yarn",
-  // ===========================================
-  // ================ Vetur ====================
-  // ===========================================
-  "vetur.experimental.templateInterpolationService": true,
-  "vetur.format.options.tabSize": 2,
-  "vetur.languageFeatures.codeActions": false,
-  "vetur.format.defaultFormatterOptions": {
-    "js-beautify-html": {
-      "wrap_attributes": "force-expand-multiline"
-    }
-  },
-  "liveServer.settings.donotShowInfoMsg": true,
   "telemetry.enableCrashReporter": false,
   "workbench.settings.enableNaturalLanguageSearch": false,
   "path-intellisense.mappings": {
@@ -130,5 +115,6 @@
       "source.fixAll.eslint": false,
       "source.fixAll.stylelint": true
     }
-  }
+  },
+  "svn.ignoreMissingSvnWarning": true
 }
