--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": ">=12.0.0",
     "vue": ">=3.0.0"
   },
+ "typings": "types/index.d.ts",
   "main": "dist/index.es.js",
   "module": "dist/index.es.js",
     "style": "dist/style.css",
