--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
+  "private":true,
   "workspaces": [
     "packages/*"
   ],
@@ -10,19 +11,14 @@
     "type": "git",
     "url": "https://github.com/majun2232/vue3sketchRuler"
   },
-  "engines": {
-    "node": ">=12.0.0",
-    "vue": ">=3.0.0"
-  },
- "typings": "types/index.d.ts",
+
+  "typings": "types/index.d.ts",
   "main": "dist/index.es.js",
   "module": "dist/index.es.js",
-    "style": "dist/style.css",
+  "style": "dist/style.css",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --config vite.demo.js",
     "build": "vite build",
-    "build:demo": "vite build --config vite.demo.js",
-    "serve": "vite preview",
     "precommit": "lint-staged",
     "lint-fix": "eslint --fix  --ext .vue,.js,.ts",
     "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
@@ -31,30 +27,33 @@
     "pretty": "pretty-quick --staged",
     "prepare": "husky install"
   },
-   "peerDependencies": {
-   "vue": "^3.2.6"
+  "dependencies": {
+
   },
   "devDependencies": {
-    "sass": "^1.39.0",
+     "vue": "^3.2.19",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@vitejs/plugin-vue": "^1.9.2",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vitejs/plugin-vue": "^1.6.1",
-    "eslint": "^7.32.0",
+     "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "conventional-changelog-cli": "^2.1.1",
     "cross-env": "^7.0.3",
-    "eslint-plugin-vue": "7.17.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "@vue/compiler-sfc": "^3.2.6",
+    "eslint-plugin-vue": "7.17.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
-    "prettier-eslint-cli": "^5.0.1",
     "pretty-quick": "^3.1.1",
+    "sass": "^1.39.0",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
     "stylelint-order": "4.1.0",
-    "vite": "^2.5.4"
+    "vite": "^2.6.2",
+    "vite-plugin-dts": "^0.8.2"
   },
   "keywords": [
     "vue3",
@@ -64,10 +63,8 @@
     "vue-ruler",
     "vite2"
   ],
-    "bugs": {
+  "bugs": {
     "url": "https://github.com/majun2232/vue3sketchRuler/issues"
   },
   "homepage": "https://github.com/majun2232/vue3sketchRuler/blob/master/README.md"
-
-
 }
