--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,9 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "baseUrl": ".",
-    "paths": {
-      "@/*": ["./*"]
-    },
+    // "paths": {
+    //   "@/*": ["./*"]
+    // },
     "lib": ["esnext", "dom"]
   },
   "include": ["src/**/*"]
