--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -103,6 +103,9 @@
       "source.fixAll.stylelint": true
     }
   },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   "[markdown]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
