--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vitejs/plugin-vue": "^1.9.2",
     "@vue/eslint-config-prettier": "^6.0.0",
     "cross-env": "^7.0.3",
+    "typescript": "^4.4.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -50,7 +51,7 @@
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
     "stylelint-order": "4.1.0",
-    "vite": "^2.6.2",
+    "vite": "^2.6.5",
     "vite-plugin-dts": "^0.8.2",
     "vue": "^3.2.19"
   },
