--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@vitejs/plugin-vue": "^1.9.2",
     "@vue/eslint-config-prettier": "^6.0.0",
     "cross-env": "^7.0.3",
-    "typescript": "^4.4.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -45,12 +44,14 @@
     "gh-pages": "^3.2.3",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
+    "lodash-es": "^4.17.21",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "sass": "^1.39.0",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
     "stylelint-order": "4.1.0",
+    "typescript": "^4.4.3",
     "vite": "^2.6.5",
     "vite-plugin-dts": "^0.8.2",
     "vue": "^3.2.19"
@@ -65,5 +66,8 @@
   "bugs": {
     "url": "https://github.com/majun2232/vue3sketchRuler/issues"
   },
-  "homepage": "https://github.com/majun2232/vue3sketchRuler/blob/master/README.md"
+  "homepage": "https://github.com/majun2232/vue3sketchRuler/blob/master/README.md",
+  "dependencies": {
+    "@types/lodash-es": "^4.17.5"
+  }
 }
