--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/majun2232/vue3sketchRuler"
   },
-  "typings": "src/index-types.ts",
+  "typings": "src/types/index.d.ts",
   "main": "lib/index.umd.js",
   "module": "lib/index.es.js",
   "style": "lib/style.css",
@@ -53,7 +53,7 @@
     "stylelint-order": "4.1.0",
     "typescript": "^4.4.3",
     "vite": "^2.6.5",
-    "vite-plugin-dts": "^0.8.2",
+    "vite-plugin-dts": "^0.9.2",
     "vue": "^3.2.19"
   },
   "keywords": [
