--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-sketch-ruler",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
   "private2": true,
@@ -54,7 +54,8 @@
     "typescript": "^4.4.3",
     "vite": "^2.6.5",
     "vite-plugin-dts": "^0.9.2",
-    "vue": "^3.2.19"
+    "vue": "^3.2.19",
+    "vue3-sketch-ruler":"1.1.4"
   },
   "keywords": [
     "vue3",
