--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint-fix": "eslint --fix  --ext .vue,.js,.ts",
     "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
     "format": "prettier-eslint --write src/**/*.{js,vue,css,scss,styl} && prettier-eslint --write packages/**/*.{js,vue,css,scss,styl} ",
-    "css": "cross-env stylelint src/**/*.{html,vue,css,less,scss,styl} --fix && stylelint packages/**/*.{html,vue,css,less,scss,styl} ",
+    "css": "cross-env stylelint **/*.{html,vue,css,less,scss,styl} --fix",
     "pretty": "pretty-quick --staged",
     "prepare": "husky install"
   },
@@ -48,14 +48,17 @@
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
     "sass": "^1.43.3",
-    "stylelint": "14.0.0",
-    "stylelint-config-standard": "23.0.0",
-    "stylelint-order": "5.0.0",
+   "stylelint": "13.13.1",
+    "stylelint-config-standard": "22.0.0",
+    "stylelint-order": "4.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-scss": "^4.0.0",
     "typescript": "^4.4.4",
     "vite": "^2.6.10",
     "vite-plugin-dts": "^0.9.2",
     "vue": "^3.2.20",
-    "vue3-sketch-ruler":"1.1.8"
+       "postcss-sass": "^0.5.0",
+    "vue3-sketch-ruler": "1.1.8"
   },
   "keywords": [
     "vue3",
@@ -69,5 +72,6 @@
   },
   "homepage": "https://github.com/majun2232/vue3sketchRuler/blob/master/README.md",
   "dependencies": {
+
   }
 }
