--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-sketch-ruler",
-  "version": "1.1.10",
+  "version": "1.1.11",
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
   "private2": true,
@@ -19,8 +19,8 @@
     "precommit": "lint-staged",
     "lint-fix": "eslint --fix  --ext .vue,.js,.ts",
     "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
-    "format": "prettier-eslint --write src/**/*.{js,vue,css,scss,styl} && prettier-eslint --write packages/**/*.{js,vue,css,scss,styl} ",
-    "css": "cross-env stylelint src/**/*.{html,vue,css,less,scss,styl} --fix && stylelint packages/**/*.{html,vue,css,less,scss,styl} ",
+    "format": "prettier-eslint --write src/**/*.{js,vue} && prettier-eslint --write",
+    "css": "cross-env stylelint src/**/*.{vue,scss} --fix",
     "pretty": "pretty-quick --staged",
     "prepare": "husky install"
   },
@@ -47,27 +47,26 @@
     "lodash-es": "^4.17.21",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
-    "sass": "^1.43.3",
-    "stylelint": "14.0.0",
+    "sass": "^1.43.4",
+    "stylelint": "14.0.1",
     "stylelint-config-standard": "23.0.0",
     "stylelint-order": "5.0.0",
     "typescript": "^4.4.4",
     "vite": "^2.6.10",
     "vite-plugin-dts": "^0.9.2",
     "vue": "^3.2.20",
-    "vue3-sketch-ruler":"1.1.8"
+    "vue3-sketch-ruler": "^1.1.6"
   },
   "keywords": [
     "vue3",
     "ruler",
     "javascript",
     "sketch-ruler",
+       "vue-sketch-ruler",
     "vite"
   ],
   "bugs": {
     "url": "https://github.com/majun2232/vue3sketchRuler/issues"
   },
-  "homepage": "https://github.com/majun2232/vue3sketchRuler/blob/master/README.md",
-  "dependencies": {
-  }
+  "homepage": "https://github.com/majun2232/vue3sketchRuler/blob/master/README.md"
 }
