--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "main": "lib/index.es.js",
   "module": "lib/index.es.js",
   "style": "lib/style.css",
+
   "scripts": {
     "dev": "vite --config vite.demo.js",
     "build": "vite build",
@@ -22,7 +23,8 @@
     "format": "prettier-eslint --write src/**/*.{js,vue} && prettier-eslint --write",
     "css": "cross-env stylelint src/**/*.{vue,scss} --fix",
     "pretty": "pretty-quick --staged",
-    "prepare": "husky install"
+    "prepare": "husky install",
+        "test": "jest"
   },
   "lint-staged": {
     "*.{ts,tsx,js,vue,less}": "prettier --write",
@@ -30,11 +32,16 @@
     "*.{vue,css,less}": "stylelint --fix"
   },
   "devDependencies": {
+       "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
     "@commitlint/cli": "^13.2.1",
+        "@types/jest": "^27.0.2",
     "@commitlint/config-conventional": "^13.2.0",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "@vitejs/plugin-vue": "^1.9.3",
+        "@vue/babel-plugin-jsx": "^1.1.1",
+    "@vue/test-utils": "^2.0.0-rc.16",
     "@vue/eslint-config-prettier": "^6.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.0.1",
@@ -42,6 +49,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "7.20.0",
     "gh-pages": "^3.2.3",
+      "babel-jest": "^27.3.1",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.3",
     "prettier": "^2.4.1",
@@ -54,7 +62,7 @@
     "vite": "^2.6.10",
     "vite-plugin-dts": "^0.9.2",
     "vue": "^3.2.20",
-    "vue3-sketch-ruler": "^1.1.14"
+     "jest": "^27.3.1"
   },
   "keywords": [
     "vue3",
