--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "vue3-sketch-ruler",
-  "version": "1.1.7",
+  "version": "1.1.15",
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
   "private2": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/majun2232/vue3sketchRuler"
+    "url": "https://github.com/majun2232/vue3sketchRuler/"
   },
   "typings": "lib/types/index.d.ts",
   "main": "lib/index.es.js",
   "module": "lib/index.es.js",
   "style": "lib/style.css",
+
   "scripts": {
     "dev": "vite --config vite.demo.js",
     "build": "vite build",
@@ -19,10 +20,11 @@
     "precommit": "lint-staged",
     "lint-fix": "eslint --fix  --ext .vue,.js,.ts",
     "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
-    "format": "prettier-eslint --write src/**/*.{js,vue,css,scss,styl} && prettier-eslint --write packages/**/*.{js,vue,css,scss,styl} ",
-    "css": "cross-env stylelint **/*.{html,vue,css,less,scss,styl} --fix",
+    "format": "prettier-eslint --write src/**/*.{js,vue} && prettier-eslint --write",
+    "css": "cross-env stylelint src/**/*.{vue,scss} --fix",
     "pretty": "pretty-quick --staged",
-    "prepare": "husky install"
+    "prepare": "husky install",
+        "test": "jest"
   },
   "lint-staged": {
     "*.{ts,tsx,js,vue,less}": "prettier --write",
@@ -30,11 +32,16 @@
     "*.{vue,css,less}": "stylelint --fix"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
     "@commitlint/cli": "^13.2.1",
+    "@types/jest": "^27.0.2",
     "@commitlint/config-conventional": "^13.2.0",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "@vitejs/plugin-vue": "^1.9.3",
+    "@vue/babel-plugin-jsx": "^1.1.1",
+    "@vue/test-utils": "^2.0.0-rc.16",
     "@vue/eslint-config-prettier": "^6.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.0.1",
@@ -42,36 +49,30 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "7.20.0",
     "gh-pages": "^3.2.3",
+    "babel-jest": "^27.3.1",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.3",
-    "lodash-es": "^4.17.21",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
-    "sass": "^1.43.3",
-   "stylelint": "13.13.1",
-    "stylelint-config-standard": "22.0.0",
-    "stylelint-order": "4.1.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-scss": "^4.0.0",
+    "sass": "^1.43.4",
+    "stylelint": "14.0.1",
+    "stylelint-config-standard": "23.0.0",
+    "stylelint-order": "5.0.0",
     "typescript": "^4.4.4",
     "vite": "^2.6.10",
     "vite-plugin-dts": "^0.9.2",
     "vue": "^3.2.20",
-       "postcss-sass": "^0.5.0",
-    "vue3-sketch-ruler": "1.1.8"
+     "jest": "^27.3.1"
   },
   "keywords": [
     "vue3",
     "ruler",
     "javascript",
     "sketch-ruler",
+       "vue-sketch-ruler",
     "vite"
   ],
   "bugs": {
     "url": "https://github.com/majun2232/vue3sketchRuler/issues"
-  },
-  "homepage": "https://github.com/majun2232/vue3sketchRuler/blob/master/README.md",
-  "dependencies": {
-
   }
 }
