--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,16 @@
-##npm 发布忽略
 .github
-dist/
-
-node_modules/
-example
-public/
+.husky
 .vscode
+example
 src/
+.eslintignore
+.eslintrc.js
 .prettierignore
 .stylelintignore
 commitlint.config.js
 index.html
+jest.config.js
+package.json
 prettier.config.js
 stylelint.config.js
 tsconfig.json
