--- a/package.json
+++ b/package.json
@@ -63,8 +63,7 @@
     "vite": "^2.6.10",
     "vite-plugin-dts": "^0.9.2",
     "vue": "^3.2.20",
-     "jest": "^27.3.1",
-     "vue3-sketch-ruler":"1.1.20"
+     "jest": "^27.3.1"
   },
   "keywords": [
     "vue3",
