--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
   "private": false,
-  "files": ["/lib"],
+  "files": [
+    "/lib"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/majun2232/vue3sketchRuler/tree/1x"
@@ -13,7 +15,6 @@
   "main": "lib/index.es.js",
   "module": "lib/index.es.js",
   "style": "lib/style.css",
-
   "scripts": {
     "dev": "vite --config vite.demo.js",
     "build": "vite build",
@@ -25,7 +26,7 @@
     "css": "cross-env stylelint src/**/*.{vue,scss} --fix",
     "pretty": "pretty-quick --staged",
     "prepare": "husky install",
-        "test": "jest"
+    "test": "jest"
   },
   "lint-staged": {
     "*.{ts,tsx,js,vue,less}": "prettier --write",
@@ -33,25 +34,26 @@
     "*.{vue,css,less}": "stylelint --fix"
   },
   "devDependencies": {
-       "@babel/preset-env": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
     "@commitlint/cli": "^13.2.1",
-        "@types/jest": "^27.0.2",
     "@commitlint/config-conventional": "^13.2.0",
+    "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "@vitejs/plugin-vue": "^1.9.3",
-        "@vue/babel-plugin-jsx": "^1.1.1",
-    "@vue/test-utils": "^2.0.0-rc.16",
+    "@vue/babel-plugin-jsx": "^1.1.1",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/test-utils": "^2.0.0-rc.16",
+    "babel-jest": "^27.3.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "7.20.0",
     "gh-pages": "^3.2.3",
-      "babel-jest": "^27.3.1",
     "husky": "^7.0.4",
+    "jest": "^26.6.3",
     "lint-staged": "^11.2.3",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
@@ -63,14 +65,14 @@
     "vite": "^2.6.10",
     "vite-plugin-dts": "^0.9.2",
     "vue": "^3.2.20",
-     "jest": "^27.3.1"
+    "vue-jest": "^5.0.0-alpha.10"
   },
   "keywords": [
     "vue3",
     "ruler",
     "javascript",
     "sketch-ruler",
-       "vue-sketch-ruler",
+    "vue-sketch-ruler",
     "vite"
   ],
   "bugs": {
