--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,6 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          branch: gh-pages # The branch the action should deploy to.
+          branch: 1x # The branch the action should deploy to.
           folder: dist # The folder the action should deploy.
-          workspace: '1x'
-          target-folder: '1x' # 放在1X目录下
+
