--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,6 +24,5 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          branch: 1x # The branch the action should deploy to.
+          branch: 1xPage # The branch the action should deploy to.
           folder: dist # The folder the action should deploy.
-
