--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,5 +24,7 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          branch: 1xPage # The branch the action should deploy to.
+          branch: gh-pages # The branch the action should deploy to.
           folder: dist # The folder the action should deploy.
+          workspace: '1x'
+          target-folder: '1x' # 放在1X目录下
