--- a/package.json
+++ b/package.json
@@ -18,9 +18,16 @@
   "module": "lib/index.es.js",
   "style": "lib/style.css",
   "scripts": {
-    "dev": "vite --config vite.demo.js",
-    "build": "vite build",
-    "build:demo": "vite build --config vite.demo.js",
+    "postinstall": "node ./scripts/postinstall.js",
+    "install2": "cd example/v2 && yarn install",
+    "switch2": "node bin/vue-switch.js 2",
+    "switch3": "node bin/vue-switch.js 3",
+    "dev": "npx vue-demi-switch 3 && vite --config vite.demo.js",
+    "build": "npx vue-demi-switch 3 && vite build",
+    "build2": "npx vue-demi-switch 2 && cd example/v2 && vite build",
+    "dev2":"npx vue-demi-switch 2 && cd example/v2 && vite --config vite.demo.js",
+    "build:demo": "npx vue-demi-switch 3 && vite build --config vite.demo.js",
+    "build:demo2": "npx vue-demi-switch 2 && cd example/v2 && vite build --config vite.demo.js",
     "precommit": "lint-staged",
     "lint-fix": "eslint --fix  --ext .vue,.js,.ts",
     "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
