--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,7 +29,7 @@ jobs:
           workspace: '1x'
           target-folder: '1x' # 放在1X目录下
 
-          - name: Install and Build 🔧
+      - name: Install and Build2 🔧
         run: |
           npm run install2
           npm run build:demo2
