--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "name": "vue3-sketch-ruler",
-  "version": "1.3.0",
+  "version": "1.3.1-bata",
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
   "private": false,
   "files": [
     "lib",
-    "types"
+    "types",
+    "bin",
+    "scripts"
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/kakajun/vue3sketchRuler/tree/1x"
   },
-   "sideEffects": false,
+  "bin": {
+    "vue-fix": "bin/vue-fix.js",
+    "vue-switch": "bin/vue-switch.js"
+  },
+  "sideEffects": false,
   "typings": "types/index.d.ts",
   "main": "lib/index.es.js",
   "module": "lib/index.es.js",
@@ -25,7 +31,7 @@
     "dev": "npx vue-demi-switch 3 && vite --config vite.demo.js",
     "build": "npx vue-demi-switch 3 && vite build",
     "build2": "npx vue-demi-switch 2 && cd example/v2 && vite build",
-    "dev2":"npx vue-demi-switch 2 && cd example/v2 && vite --config vite.demo.js",
+    "dev2": "npx vue-demi-switch 2 && cd example/v2 && vite --config vite.demo.js",
     "build:demo": "npx vue-demi-switch 3 && vite build --config vite.demo.js",
     "build:demo2": "npx vue-demi-switch 2 && cd example/v2 && vite build --config vite.demo.js",
     "precommit": "lint-staged",
@@ -75,9 +81,10 @@
     "vite-plugin-dts": "^0.9.2",
     "vue": "^3.2.20",
     "vue-demi": "^0.12.1",
-    "vue-jest": "^5.0.0-alpha.10"
+    "vue-jest": "^5.0.0-alpha.10",
+    "vue3-sketch-ruler": "^1.3.0-bata"
   },
-    "peerDependencies": {
+  "peerDependencies": {
     "@vue/composition-api": "^1.1.0",
     "vue": "^2.6.0 || ^3.2.0"
   },
