--- a/package.json
+++ b/package.json
@@ -81,8 +81,7 @@
     "vite-plugin-dts": "^0.9.2",
     "vue": "^3.2.20",
     "vue-demi": "^0.12.1",
-    "vue-jest": "^5.0.0-alpha.10",
-    "vue3-sketch-ruler": "^1.3.0-bata"
+    "vue-jest": "^5.0.0-alpha.10"
   },
   "peerDependencies": {
     "@vue/composition-api": "^1.1.0",
