--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "switch2": "node bin/vue-switch.js 2",
     "switch3": "node bin/vue-switch.js 3",
     "dev": "npx vue-demi-switch 3 && vite --config vite.demo.js",
-    "build": "npx vue-demi-switch 3 && vite build",
+     "build": "npm run build3 && npm run build2",
+    "build3": "npx vue-demi-switch 3 && vite build",
     "build2": "npx vue-demi-switch 2 && cd example/v2 && vite build",
     "dev2": "npx vue-demi-switch 2 && cd example/v2 && vite --config vite.demo.js",
     "build:demo": "npx vue-demi-switch 3 && vite build --config vite.demo.js",
