--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-sketch-ruler",
-  "version": "1.3.1-bata",
+  "version": "1.3.1",
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
   "private": false,
