--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-sketch-ruler",
-  "version": "1.3.1",
+  "version": "1.3.3",
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
   "private": false,
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/kakajun/vue3sketchRuler/tree/1x"
+    "url": "https://github.com/kakajun/vue3-sketch-ruler/tree/1x"
   },
   "bin": {
     "vue-fix": "bin/vue-fix.js",
@@ -97,14 +97,15 @@
     }
   },
   "keywords": [
+     "vue",
     "vue3",
     "ruler",
     "javascript",
     "sketch-ruler",
     "vue-sketch-ruler",
-    "vite"
+    "room"
   ],
   "bugs": {
-    "url": "https://github.com/kakajun/vue3sketchRuler/issues"
+    "url": "https://github.com/kakajun/vue3-sketch-ruler/issues"
   }
 }
