--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
   "style": "lib/style.css",
   "scripts": {
     "postinstall": "node ./scripts/postinstall.js",
-    "install2": "cd example/v2 && yarn install",
+    "install2": "cd example/v2 && npm install",
     "switch2": "node bin/vue-switch.js 2",
     "switch3": "node bin/vue-switch.js 3",
-    "dev": "npx vue-demi-switch 3 && vite --config vite.demo.js",
+    "dev": "npm run switch3 && vite --config vite.demo.js",
      "build": "npm run build3 && npm run build2",
     "build3": "npx vue-demi-switch 3 && vite build",
     "build2": "npx vue-demi-switch 2 && cd example/v2 && vite build",
-    "dev2": "npx vue-demi-switch 2 && cd example/v2 && vite --config vite.demo.js",
+    "dev2": "npm run switch2 && cd example/v2 && vite --config vite.demo.js",
     "build:demo": "npx vue-demi-switch 3 && vite build --config vite.demo.js",
     "build:demo2": "npx vue-demi-switch 2 && cd example/v2 && vite build --config vite.demo.js",
     "precommit": "lint-staged",
@@ -80,7 +80,7 @@
     "typescript": "^4.4.4",
     "vite": "^2.6.10",
     "vite-plugin-dts": "^0.9.2",
-    "vue": "^3.2.20",
+    "vue": "3.2.20",
     "vue-demi": "^0.12.1",
     "vue-jest": "^5.0.0-alpha.10"
   },
