--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "install2": "cd example/v2 && npm install",
     "switch2": "node bin/vue-switch.js 2",
     "switch3": "node bin/vue-switch.js 3",
-    "dev": "npm run switch3 && vite --config vite.demo.js",
+    "dev": "npm  install && npm run switch3 && vite --config vite.demo.js",
      "build": "npm run build3 && npm run build2",
     "build3": "npx vue-demi-switch 3 && vite build",
     "build2": "npx vue-demi-switch 2 && cd example/v2 && vite build",
-    "dev2": "npm run switch2 && cd example/v2 && vite --config vite.demo.js",
+    "dev2": "npm run install2 && npm run switch2 && cd example/v2 && vite --config vite.demo.js",
     "build:demo": "npx vue-demi-switch 3 && vite build --config vite.demo.js",
     "build:demo2": "npx vue-demi-switch 2 && cd example/v2 && vite build --config vite.demo.js",
     "precommit": "lint-staged",
