--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "install2": "cd example/v2 && npm install",
     "switch2": "node bin/vue-switch.js 2",
     "switch3": "node bin/vue-switch.js 3",
-    "dev": "npm  install && npm run switch3 && vite --config vite.demo.js",
+    "dev": "npm run switch3 && vite --config vite.demo.js",
      "build": "npm run build3 && npm run build2",
     "build3": "npx vue-demi-switch 3 && vite build",
     "build2": "npx vue-demi-switch 2 && cd example/v2 && vite build",
