--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-sketch-ruler",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
   "private": false,
@@ -26,13 +26,13 @@
   "scripts": {
     "postinstall": "node ./scripts/postinstall.js",
     "install2": "cd example/v2 && npm install",
-    "switch2": "node bin/vue-switch.js 2",
+    "switch2": "node bin/vue-switch.js 2 && vue-demi-switch 2 vue2 ",
     "switch3": "node bin/vue-switch.js 3",
     "dev": "npm run switch3 && vite --config vite.demo.js",
      "build": "npm run build3 && npm run build2",
     "build3": "npx vue-demi-switch 3 && vite build",
     "build2": "npx vue-demi-switch 2 && cd example/v2 && vite build",
-    "dev2": "npm run install2 && npm run switch2 && cd example/v2 && vite --config vite.demo.js",
+    "dev2": " npm run switch2 && cd example/v2 && vite --config vite.demo.js",
     "build:demo": "npx vue-demi-switch 3 && vite build --config vite.demo.js",
     "build:demo2": "npx vue-demi-switch 2 && cd example/v2 && vite build --config vite.demo.js",
     "precommit": "lint-staged",
@@ -57,7 +57,7 @@
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
-    "@vitejs/plugin-vue": "^1.9.3",
+    "@vitejs/plugin-vue": "^2.3.3",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^2.0.0-rc.16",
@@ -78,10 +78,10 @@
     "stylelint-config-standard": "23.0.0",
     "stylelint-order": "5.0.0",
     "typescript": "^4.4.4",
-    "vite": "^2.6.10",
-    "vite-plugin-dts": "^0.9.2",
-    "vue": "3.2.20",
-    "vue-demi": "^0.12.1",
+    "vite": "^2.9.12",
+    "vite-plugin-dts": "^1.2.0",
+    "vue": "3.2.37",
+    "vue-demi": "^0.13.1",
     "vue-jest": "^5.0.0-alpha.10"
   },
   "peerDependencies": {
