--- a/example/v2/package.json
+++ b/example/v2/package.json
@@ -12,6 +12,7 @@
     "vite-plugin-vue2": "2.0.1",
     "vue": "2.6.14",
     "vue-demi": "^0.13.1",
+     "sass": "^1.43.4",
     "vue-template-compiler": "^2.6.14"
   }
 }
