--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@vueuse/core": "^6.7.4",
     "babel-jest": "^27.3.1",
     "cross-env": "^7.0.3",
+    "element-plus": "^2.2.5",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -63,6 +64,7 @@
     "stylelint-config-standard": "23.0.0",
     "stylelint-order": "5.0.0",
     "typescript": "^4.4.4",
+    "unplugin-element-plus": "^0.4.0",
     "vite": "^2.6.10",
     "vite-plugin-dts": "^0.9.2",
     "vue": "^3.2.20"
