--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "vue3-sketch-ruler",
-  "version": "1.2.3",
+  "name": "vue3-sketch-ruler-plus",
+  "version": "2.0.0",
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
   "private": false,
   "files": [
-    "/lib"
+    "lib",
+    "types",
+    "bin",
+    "scripts"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/majun2232/vue3sketchRuler/tree/1x"
+    "url": "https://github.com/kakajun/vue3-sketch-ruler/tree/1x"
   },
-  "typings": "lib/types/index.d.ts",
+  "bin": {
+    "vue-fix": "bin/vue-fix.js",
+    "vue-switch": "bin/vue-switch.js"
+  },
+  "sideEffects": false,
+  "typings": "types/index.d.ts",
   "main": "lib/index.es.js",
   "module": "lib/index.es.js",
   "style": "lib/style.css",
@@ -41,21 +49,21 @@
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
-    "@vitejs/plugin-vue": "^1.9.3",
+    "@vitejs/plugin-vue": "^2.3.3",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^2.0.0-rc.16",
-    "@vueuse/core": "^6.7.4",
     "babel-jest": "^27.3.1",
     "cross-env": "^7.0.3",
-    "element-plus": "^2.2.5",
     "eslint": "^8.0.1",
+    "element-plus": "^2.2.5",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "7.20.0",
+    "unplugin-vue-components": "^0.19.5",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
-    "jest": "^27.3.1",
+    "jest": "^26.6.3",
     "lint-staged": "^11.2.3",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
@@ -64,20 +72,35 @@
     "stylelint-config-standard": "23.0.0",
     "stylelint-order": "5.0.0",
     "typescript": "^4.4.4",
-    "unplugin-element-plus": "^0.4.0",
-    "vite": "^2.6.10",
-    "vite-plugin-dts": "^0.9.2",
-    "vue": "^3.2.20"
+    "vite": "^2.9.12",
+    "vite-plugin-dts": "^1.2.0",
+    "vue": "3.2.37",
+    "vue-demi": "^0.13.1",
+    "vue-jest": "^5.0.0-alpha.10"
+  },
+  "peerDependencies": {
+    "@vue/composition-api": "^1.1.0",
+    "vue": "^2.6.0 || ^3.2.0"
+  },
+  "peerDependenciesMeta": {
+    "vue": {
+      "optional": true
+    },
+    "@vue/composition-api": {
+      "optional": true
+    }
   },
   "keywords": [
+    "vue",
     "vue3",
     "ruler",
     "javascript",
     "sketch-ruler",
     "vue-sketch-ruler",
-    "vite"
+    "room"
   ],
   "bugs": {
-    "url": "https://github.com/majun2232/vue3sketchRuler/issues"
-  }
+    "url": "https://github.com/kakajun/vue3-sketch-ruler/issues"
+  },
+  "__npminstall_done": false
 }
