--- a/package.json
+++ b/package.json
@@ -55,12 +55,11 @@
     "@vue/test-utils": "^2.0.0-rc.16",
     "babel-jest": "^27.3.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.0.1",
     "element-plus": "^2.2.5",
+    "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "7.20.0",
-    "unplugin-vue-components": "^0.19.5",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
@@ -72,8 +71,10 @@
     "stylelint-config-standard": "23.0.0",
     "stylelint-order": "5.0.0",
     "typescript": "^4.4.4",
+    "unplugin-vue-components": "^0.19.5",
     "vite": "^2.9.12",
     "vite-plugin-dts": "^1.2.0",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue": "3.2.37",
     "vue-demi": "^0.13.1",
     "vue-jest": "^5.0.0-alpha.10"
