--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "stylelint": "14.0.1",
     "stylelint-config-standard": "23.0.0",
     "stylelint-order": "5.0.0",
+    "svg-sprite-loader": "^6.0.11",
     "typescript": "^4.4.4",
     "unplugin-vue-components": "^0.19.5",
     "vite": "^2.9.12",
