--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "lint-staged": "^11.2.3",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
+    "rollup-plugin-banner": "^0.2.1",
     "sass": "^1.43.4",
     "stylelint": "14.0.1",
     "stylelint-config-standard": "23.0.0",
@@ -97,7 +98,7 @@
     }
   },
   "keywords": [
-     "vue",
+    "vue",
     "vue3",
     "ruler",
     "javascript",
