--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
-    "@vitejs/plugin-vue": "^1.9.3",
+    "@vitejs/plugin-vue": "1.9.3",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^2.0.0-rc.16",
@@ -78,9 +78,9 @@
     "stylelint-config-standard": "23.0.0",
     "stylelint-order": "5.0.0",
     "typescript": "^4.4.4",
-    "vite": "^2.6.10",
+    "vite": "2.6.10",
     "vite-plugin-dts": "^0.9.2",
-    "vue": "^3.2.20",
+    "vue": "3.2.20",
     "vue-demi": "^0.12.1",
     "vue-jest": "^5.0.0-alpha.10"
   },
