--- a/package.json
+++ b/package.json
@@ -55,23 +55,23 @@
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@types/jest": "^27.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
+     "@typescript-eslint/eslint-plugin": "6.2.0",
+    "@typescript-eslint/parser": "6.2.0",
     "@vitejs/plugin-vue": "^1.9.3",
     "@vue/babel-plugin-jsx": "^1.1.1",
-    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.0.0-rc.16",
     "babel-jest": "^27.3.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "7.20.0",
+    "eslint": "8.45.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-vue": "9.18.1",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
     "lint-staged": "^11.2.3",
-    "prettier": "^2.4.1",
+    "prettier": "^3.1.0",
     "pretty-quick": "^3.1.1",
     "rollup-plugin-banner": "^0.2.1",
     "sass": "^1.43.4",
