--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "build:demo": "npx vue-demi-switch 3 && vite build --config vite.demo.js",
     "build:demo2": "npx vue-demi-switch 2 && cd example/v2 && vite build --config vite.demo.js",
     "precommit": "lint-staged",
-    "lint-fix": "eslint --fix  --ext .vue,.js,.ts",
-    "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
-    "format": "prettier-eslint --write src/**/*.{js,vue} && prettier-eslint --write",
-    "css": "cross-env stylelint src/**/*.{vue,scss} --fix",
-    "pretty": "pretty-quick --staged",
+    "clean": "npx rimraf node_modules",
+    "clean:cache": "npx rimraf node_modules/.cache",
+    "lint:eslint": "eslint --fix --ext .js,.ts,.vue ./src",
+    "lint:format": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
+    "lint:style": "stylelint --fix \"./src/**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
+    "lint:lint-staged": "lint-staged -c ",
     "prepare": "husky install",
     "test": "jest"
   },
@@ -55,34 +56,38 @@
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@types/jest": "^27.0.2",
-     "@typescript-eslint/eslint-plugin": "6.2.0",
-    "@typescript-eslint/parser": "6.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "@vitejs/plugin-vue": "^1.9.3",
     "@vue/babel-plugin-jsx": "^1.1.1",
-    "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.0.0-rc.16",
     "babel-jest": "^27.3.1",
     "cross-env": "^7.0.3",
-    "eslint": "8.45.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-define-config": "^1.24.1",
     "eslint-plugin-vue": "9.18.1",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
     "lint-staged": "^11.2.3",
     "prettier": "^3.1.0",
+    "postcss-html": "^1.5.0",
     "pretty-quick": "^3.1.1",
     "rollup-plugin-banner": "^0.2.1",
-    "sass": "^1.43.4",
-    "stylelint": "14.0.1",
-    "stylelint-config-standard": "23.0.0",
-    "stylelint-order": "5.0.0",
-    "typescript": "^4.4.4",
-    "vite": "^2.6.10",
-    "vite-plugin-dts": "^0.9.2",
-    "vue": "^3.2.20",
-    "vue-demi": "^0.12.1",
+    "sass": "^1.69.5",
+    "stylelint": "^15.11.0",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recommended": "^13.0.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-order": "^6.0.3",
+    "typescript": "5.2.2",
+    "vite": "4.5.0",
+    "vite-plugin-dts": "3.6.3",
+    "vue": "^3.3.8",
+    "vue-types": "^5.1.1",
+    "vue-demi": "^0.14.6",
     "vue-jest": "^5.0.0-alpha.10"
   },
   "peerDependencies": {
