feat: 加尺规范围控制

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
   //===========================================
   //============= Editor ======================
   //===========================================
-  "explorer.openEditors.visible": 0,
+  "explorer.openEditors.visible": 1,
   "editor.tabSize": 2,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "diffEditor.ignoreTrimWhitespace": false,
@@ -70,7 +70,6 @@
   },
   "stylelint.enable": true,
   "stylelint.packageManager": "yarn",
-  "telemetry.enableCrashReporter": false,
   "workbench.settings.enableNaturalLanguageSearch": false,
   "path-intellisense.mappings": {
     "@/": "${workspaceRoot}/src"
@@ -110,13 +109,27 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": "explicit"
   },
   "[vue]": {
     "editor.codeActionsOnSave": {
       "source.fixAll.eslint": false,
       "source.fixAll.stylelint": true
-    }
+    },
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "svn.ignoreMissingSvnWarning": true
+  "editor.formatOnSave": true,
+  // koroFileHeader 插件配置
+  "fileheader.configObj": {
+    "autoAdd": false, // 自动添加头部注释开启才能自动添加
+    "autoAlready": false, // 默认开启, 只给支持的语言添加注释
+    "createHeader": false, // 新建文件不自动添加注释
+    "prohibitAutoAdd": ["py"] // 禁止.json .md文件，自动添加头部注释
+  },
+  "[scss][vue]": {
+    "editor.codeActionsOnSave": {
+      "source.fixAll.eslint": "never",
+      "source.fixAll.stylelint": "explicit"
+    }
+  }
 }
