--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "baseUrl": ".",
-    // "suppressImplicitAnyIndexErrors": true,
+    "types": ["vitest/globals"],
     "lib": ["esnext", "dom"]
   },
   "include": ["src/**/*"]
