--- a/package.json
+++ b/package.json
@@ -53,12 +53,13 @@
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-typescript": "^7.23.3",
+    "@types/node": "^20.11.13",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/babel-plugin-jsx": "^1.2.1",
     "@vue/test-utils": "^2.4.4",
-    "babel-jest": "^29.7.0",
+    "canvas": "^2.11.2",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -68,6 +69,7 @@
     "gh-pages": "^6.1.1",
     "husky": "^9.0.7",
     "is-ci": "^3.0.1",
+    "jsdom": "^24.0.0",
     "lint-staged": "^15.2.0",
     "postcss-html": "^1.6.0",
     "prettier": "^3.2.4",
@@ -82,12 +84,10 @@
     "typescript": "5.3.3",
     "vite": "5.0.12",
     "vite-plugin-dts": "3.7.2",
+    "vitest": "^1.2.2",
+    "vue-tsc": "^1.8.22",
     "vue": "^3.4.15",
     "vue-demi": "^0.14.6",
-    "vue-jest": "^3.0.7",
-    "vitest": "^1.2.2",
-    "jsdom": "^24.0.0",
-    "canvas":"^2.11.2",
     "vue-types": "^5.1.1"
   },
   "peerDependencies": {
