--- a/.eslintignore
+++ b/.eslintignore
@@ -1,16 +1,9 @@
-
-*.sh
-node_modules
-lib
-*.md
-*.scss
-*.woff
-*.ttf
-.vscode
-.idea
-
 /build/
+/config/
 /dist/
-/public/
-
-.vscode
+/*.js
+/test/unit/coverage/
+/node_modules/*
+/dist*
+/lib*
+/src/main.ts
