--- a/.stylelintignore
+++ b/.stylelintignore
@@ -1,14 +1,6 @@
-*.js
-*.png
-*.eot
-*.ttf
-*.woff
-*.jsx
-*.ts
-*.tsx
-*.jpg
-/dist/
-/lib/
-/public/
-/node_modules/
-.output.js
+/dist/*
+/public/*
+public/*
+/dist*
+/src/types/env.d.ts
+/docs/**/*
