--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue3-sketch-ruler-plus",
-  "version": "2.0.0",
+  "name": "vue3-sketch-ruler",
+  "version": "1.3.15",
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
   "private": false,
@@ -20,21 +20,30 @@
   },
   "sideEffects": false,
   "typings": "types/index.d.ts",
-  "main": "lib/index.es.js",
-  "module": "lib/index.es.js",
+  "main": "lib/index.js",
+  "module": "lib/index.mjs",
   "style": "lib/style.css",
   "scripts": {
-    "dev": "vite --config vite.demo.js",
-    "build": "vite build",
-    "build:demo": "vite build --config vite.demo.js",
+    "postinstall": "node ./scripts/postinstall.js",
+    "install2": "cd example/v2 && npm install",
+    "switch2": "node bin/vue-switch.js 2 && vue-demi-switch 2",
+    "switch3": "node bin/vue-switch.js 3 && vue-demi-switch 3",
+    "dev": "npm run switch3 && vite --config vite.demo.ts",
+    "build": "npm run build3 && npm run build2",
+    "build3": "npx vue-demi-switch 3 && vite build",
+    "build2": "npx vue-demi-switch 2 && cd example/v2 && vite build",
+    "dev2": " npm run switch2 && cd example/v2 && vite --config vite.demo.ts",
+    "build:demo": "npx vue-demi-switch 3 && vite build --config vite.demo.ts",
+    "build:demo2": "npx vue-demi-switch 2 && cd example/v2 && vite build --config vite.demo.ts",
     "precommit": "lint-staged",
-    "lint-fix": "eslint --fix  --ext .vue,.js,.ts",
-    "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
-    "format": "prettier-eslint --write src/**/*.{js,vue} && prettier-eslint --write",
-    "css": "cross-env stylelint src/**/*.{vue,scss} --fix",
-    "pretty": "pretty-quick --staged",
-    "prepare": "husky install",
-    "test": "jest"
+    "clean": "npx rimraf node_modules",
+    "clean:cache": "npx rimraf node_modules/.cache",
+    "lint:eslint": "eslint --fix --ext .js,.ts,.vue ./src",
+    "lint:format": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
+    "lint:style": "stylelint --fix \"./src/**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
+    "lint:lint-staged": "lint-staged -c ",
+    "prepare": "is-ci || husky install",
+    "test": "vitest"
   },
   "lint-staged": {
     "*.{ts,tsx,js,vue,less}": "prettier --write",
@@ -42,55 +51,43 @@
     "*.{vue,css,less}": "stylelint --fix"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-typescript": "^7.15.0",
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
-    "@types/jest": "^27.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/babel-plugin-jsx": "^1.1.1",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/test-utils": "^2.0.0-rc.16",
-    "babel-jest": "^27.3.1",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/node": "^20.14.5",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/babel-plugin-jsx": "^1.2.2",
+    "@vue/test-utils": "^2.4.6",
+    "canvas": "^2.11.2",
     "cross-env": "^7.0.3",
-    "element-plus": "^2.2.5",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "7.20.0",
-    "gh-pages": "^3.2.3",
-    "husky": "^7.0.4",
-    "jest": "^26.6.3",
-    "lint-staged": "^11.2.3",
-    "prettier": "^2.4.1",
-    "pretty-quick": "^3.1.1",
-    "sass": "^1.43.4",
-    "stylelint": "14.0.1",
-    "stylelint-config-standard": "23.0.0",
-    "stylelint-order": "5.0.0",
-    "svg-sprite-loader": "^6.0.11",
-    "typescript": "^4.4.4",
-    "unplugin-vue-components": "^0.19.5",
-    "vite": "^2.9.12",
-    "vite-plugin-dts": "^1.2.0",
-    "vite-plugin-svg-icons": "^2.0.1",
-    "vue": "3.2.37",
-    "vue-demi": "^0.13.1",
-    "vue-jest": "^5.0.0-alpha.10"
-  },
-  "peerDependencies": {
-    "@vue/composition-api": "^1.1.0",
-    "vue": "^2.6.0 || ^3.2.0"
-  },
-  "peerDependenciesMeta": {
-    "vue": {
-      "optional": true
-    },
-    "@vue/composition-api": {
-      "optional": true
-    }
+    "eslint": "^9.5.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-define-config": "^2.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "9.26.0",
+    "gh-pages": "^6.1.1",
+    "husky": "^9.0.11",
+    "is-ci": "^3.0.1",
+    "jsdom": "^24.1.0",
+    "lint-staged": "^15.2.7",
+    "postcss-html": "^1.7.0",
+    "prettier": "^3.3.2",
+    "pretty-quick": "^4.0.0",
+    "rollup-plugin-banner": "^0.2.1",
+    "sass": "^1.77.6",
+    "stylelint": "^16.6.1",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recommended": "^14.0.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-order": "^6.0.4",
+    "typescript": "5.4.5",
+    "vite": "5.3.1",
+    "vite-plugin-dts": "3.9.1",
+    "vitest": "^1.6.0",
+    "vue-tsc": "^2.0.21",
+    "vue": "^3.4.29",
+    "vue-types": "^5.1.2"
   },
   "keywords": [
     "vue",
@@ -103,6 +100,5 @@
   ],
   "bugs": {
     "url": "https://github.com/kakajun/vue3-sketch-ruler/issues"
-  },
-  "__npminstall_done": false
+  }
 }
