--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "private": false,
   "files": [
     "lib",
-    "types",
-    "bin",
-    "scripts"
+    "types"
   ],
   "repository": {
     "type": "git",
