--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "precommit": "lint-staged",
     "clean": "npx rimraf node_modules",
     "clean:cache": "npx rimraf node_modules/.cache",
-    "lint:eslint": "eslint --fix --ext .js,.ts,.vue ./packages",
+    "eslint": "eslint .",
     "lint:format": "prettier --write --loglevel warn \"packages/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
     "lint:style": "stylelint --fix \"./packages/**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
     "lint:lint-staged": "lint-staged -c ",
@@ -43,15 +43,13 @@
     "@vue/babel-plugin-jsx": "^1.2.5",
     "@vue/test-utils": "^2.4.6",
     "@element-plus/icons-vue": "^2.3.1",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.11.1",
     "canvas": "^2.11.2",
     "compare-func": "^2.0.0",
     "conventional-changelog": "^6.0.0",
     "conventional-changelog-cli": "^5.0.0",
     "eslint": "^9.11.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-define-config": "^2.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vue": "^9.28.0",
     "gh-pages": "^6.1.1",
     "husky": "^9.1.6",
     "jsdom": "^25.0.1",
